# ArrowAI

./: .gitignore  README.md  TODO.md
backend/: README.md  pyproject.toml  requirements.txt  test.py
backend/app/: main.py
backend/app/api/routes/: artifacts.py  health.py  sandbox.py  ws.py  ws_mcp.py
backend/app/aws/: s3_client.py
backend/app/core/: config.py  logging.py  version.py
backend/app/models/interface/: llm_interface.py
backend/app/models/orchestration/: state.py
backend/app/models/tools/: sandbox.py
backend/app/nodes/: clarification.py  execute.py  planner.py  responder.py
backend/app/services/agent/: responder.py
backend/tmp/run_1758708876344_xr1h9lzb3/: CEL.md
backend/tmp/run_1758711011301_dcc5tr5xb/: CEL.md
backend/tmp/run_1758711267502_kt04j2kp4/: CEL.md  spend.csv
backend/tmp/run_1758711372464_rlgul46e3/: CEL.md
backend/tmp/run_1758712052637_4m9flkad8/: CEL.md  kpis.parquet  test.py
backend/tmp/run_1758713277170_54z0qqah0/: CEL.md  leads.csv
frontend/: package.json
frontend/src/: App.tsx  main.tsx
frontend/src/contexts/: ChatContext.tsx  ThemeContext.tsx
frontend/src/services/: websocketService.ts
frontend/src/styles/: AppStyles.tsx  GlobalStyle.ts
frontend/src/types/: chat.ts  styled-components.d.ts  theme.ts
mcp/code_sandbox/: main.py  pyproject.toml  requirements.txt  sandbox_mcp.py
mcp/code_sandbox/aws/: s3_client.py
mcp/code_sandbox/components/: executor.py  models.py
mcp/code_sandbox/services/: openai_client.py
mcp/code_sandbox/utils/: LLMAdapter.py  code_extracters.py
test/: test_prompts.md
(+19 files in other folders)
